--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "components/sbus"]
 	path = components/sbus
 	url = https://github.com/Mettikodeva/sbus
+[submodule "components/arduino"]
+	path = components/arduino
+	url = https://github.com/Mettikodeva/arduino-esp32/
+	branch = idf-release/v5.1
